// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker.Range icon 1`] = `
<div>
  <div
    class="rc-picker rc-picker-range"
  >
    <div
      class="rc-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        value="1990-09-03"
      />
    </div>
    <div
      class="rc-picker-range-separator"
    >
      ~
    </div>
    <div
      class="rc-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        value="1990-09-03"
      />
    </div>
    <div
      class="rc-picker-active-bar"
      style="position: absolute; width: 0px; left: 0px;"
    />
    <span
      class="rc-picker-suffix"
    >
      <span
        class="suffix-icon"
      />
    </span>
    <span
      class="rc-picker-clear"
      role="button"
    >
      <span
        class="suffix-icon"
      />
    </span>
  </div>
</div>
`;

exports[`Picker.Range onPanelChange is array args should render correctly in rtl 1`] = `
<div>
  <div
    class="rc-picker rc-picker-range rc-picker-rtl"
  >
    <div
      class="rc-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        value=""
      />
    </div>
    <div
      class="rc-picker-range-separator"
    >
      ~
    </div>
    <div
      class="rc-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        value=""
      />
    </div>
    <div
      class="rc-picker-active-bar"
      style="position: absolute; width: 0px; right: 0px;"
    />
  </div>
</div>
`;

exports[`Picker.Range panelRender 1`] = `
<body>
  <div>
    <div
      class="rc-picker rc-picker-range"
    >
      <div
        class="rc-picker-input rc-picker-input-active"
      >
        <input
          aria-invalid="false"
          autocomplete="off"
          value=""
        />
      </div>
      <div
        class="rc-picker-range-separator"
      >
        ~
      </div>
      <div
        class="rc-picker-input"
      >
        <input
          aria-invalid="false"
          autocomplete="off"
          value=""
        />
      </div>
      <div
        class="rc-picker-active-bar"
        style="position: absolute; width: 0px; left: 0px;"
      />
    </div>
  </div>
  <div>
    <div
      class="rc-picker-dropdown rc-picker-dropdown-range rc-picker-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="rc-picker-range-wrapper rc-picker-date-range-wrapper"
      >
        <div
          class="rc-picker-range-arrow"
          style="left: 0px;"
        />
        <div
          class="rc-picker-panel-container rc-picker-date-panel-container"
          style="margin-left: 0px; margin-right: auto;"
          tabindex="-1"
        >
          <h1>
            Light
          </h1>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Picker.Range use dateRender and monthCellRender in date range picker 1`] = `
<body>
  <div>
    <div
      class="rc-picker rc-picker-range rc-picker-focused"
    >
      <div
        class="rc-picker-input rc-picker-input-active"
      >
        <input
          aria-invalid="false"
          autocomplete="off"
          value=""
        />
      </div>
      <div
        class="rc-picker-range-separator"
      >
        ~
      </div>
      <div
        class="rc-picker-input"
      >
        <input
          aria-invalid="false"
          autocomplete="off"
          value=""
        />
      </div>
      <div
        class="rc-picker-active-bar"
        style="position: absolute; width: 0px; left: 0px;"
      />
    </div>
  </div>
  <div>
    <div
      class="rc-picker-dropdown rc-picker-dropdown-range rc-picker-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="rc-picker-range-wrapper rc-picker-date-range-wrapper"
      >
        <div
          class="rc-picker-range-arrow"
          style="left: 0px;"
        />
        <div
          class="rc-picker-panel-container rc-picker-date-panel-container"
          style="margin-left: 0px; margin-right: auto;"
          tabindex="-1"
        >
          <div
            class="rc-picker-panel-layout"
          >
            <div>
              <div
                class="rc-picker-panels"
              >
                <div
                  class="rc-picker-panel"
                >
                  <div
                    class="rc-picker-date-panel"
                  >
                    <div
                      class="rc-picker-header"
                    >
                      <button
                        class="rc-picker-header-super-prev-btn"
                        tabindex="-1"
                        type="button"
                      >
                        «
                      </button>
                      <button
                        class="rc-picker-header-prev-btn"
                        tabindex="-1"
                        type="button"
                      >
                        ‹
                      </button>
                      <div
                        class="rc-picker-header-view"
                      >
                        <button
                          class="rc-picker-year-btn"
                          tabindex="-1"
                          type="button"
                        >
                          1990年
                        </button>
                        <button
                          class="rc-picker-month-btn"
                          tabindex="-1"
                          type="button"
                        >
                          9月
                        </button>
                      </div>
                      <button
                        class="rc-picker-header-next-btn"
                        style="visibility: hidden;"
                        tabindex="-1"
                        type="button"
                      >
                        ›
                      </button>
                      <button
                        class="rc-picker-header-super-next-btn"
                        style="visibility: hidden;"
                        tabindex="-1"
                        type="button"
                      >
                        »
                      </button>
                    </div>
                    <div
                      class="rc-picker-body"
                    >
                      <table
                        class="rc-picker-content"
                      >
                        <thead>
                          <tr>
                            <th>
                              一
                            </th>
                            <th>
                              二
                            </th>
                            <th>
                              三
                            </th>
                            <th>
                              四
                            </th>
                            <th>
                              五
                            </th>
                            <th>
                              六
                            </th>
                            <th>
                              日
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                27
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                28
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                29
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                30
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                31
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                1
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                2
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view rc-picker-cell-today"
                            >
                              <div>
                                D
                                3
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                4
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                5
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                6
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                7
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                8
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                9
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                10
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                11
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                12
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                13
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                14
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                15
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                16
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                17
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                18
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                19
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                20
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                21
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                22
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                23
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                24
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                25
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                26
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                27
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                28
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                29
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                30
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                1
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                2
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                3
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                4
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                5
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                6
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                7
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <div
                  class="rc-picker-panel"
                >
                  <div
                    class="rc-picker-date-panel"
                  >
                    <div
                      class="rc-picker-header"
                    >
                      <button
                        class="rc-picker-header-super-prev-btn"
                        style="visibility: hidden;"
                        tabindex="-1"
                        type="button"
                      >
                        «
                      </button>
                      <button
                        class="rc-picker-header-prev-btn"
                        style="visibility: hidden;"
                        tabindex="-1"
                        type="button"
                      >
                        ‹
                      </button>
                      <div
                        class="rc-picker-header-view"
                      >
                        <button
                          class="rc-picker-year-btn"
                          tabindex="-1"
                          type="button"
                        >
                          1990年
                        </button>
                        <button
                          class="rc-picker-month-btn"
                          tabindex="-1"
                          type="button"
                        >
                          10月
                        </button>
                      </div>
                      <button
                        class="rc-picker-header-next-btn"
                        tabindex="-1"
                        type="button"
                      >
                        ›
                      </button>
                      <button
                        class="rc-picker-header-super-next-btn"
                        tabindex="-1"
                        type="button"
                      >
                        »
                      </button>
                    </div>
                    <div
                      class="rc-picker-body"
                    >
                      <table
                        class="rc-picker-content"
                      >
                        <thead>
                          <tr>
                            <th>
                              一
                            </th>
                            <th>
                              二
                            </th>
                            <th>
                              三
                            </th>
                            <th>
                              四
                            </th>
                            <th>
                              五
                            </th>
                            <th>
                              六
                            </th>
                            <th>
                              日
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                1
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                2
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                3
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                4
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                5
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                6
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                7
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                8
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                9
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                10
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                11
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                12
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                13
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                14
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                15
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                16
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                17
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                18
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                19
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                20
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                21
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                22
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                23
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                24
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                25
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                26
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                27
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                28
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                29
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                30
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                D
                                31
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                1
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                2
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                3
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                4
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                5
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                6
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                7
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                8
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                9
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                10
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                            >
                              <div>
                                D
                                11
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Picker.Range use dateRender and monthCellRender in month range picker 1`] = `
<body>
  <div>
    <div
      class="rc-picker rc-picker-range rc-picker-focused"
    >
      <div
        class="rc-picker-input rc-picker-input-active"
      >
        <input
          aria-invalid="false"
          autocomplete="off"
          value=""
        />
      </div>
      <div
        class="rc-picker-range-separator"
      >
        ~
      </div>
      <div
        class="rc-picker-input"
      >
        <input
          aria-invalid="false"
          autocomplete="off"
          value=""
        />
      </div>
      <div
        class="rc-picker-active-bar"
        style="position: absolute; width: 0px; left: 0px;"
      />
    </div>
  </div>
  <div>
    <div
      class="rc-picker-dropdown rc-picker-dropdown-range rc-picker-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="rc-picker-range-wrapper rc-picker-month-range-wrapper"
      >
        <div
          class="rc-picker-range-arrow"
          style="left: 0px;"
        />
        <div
          class="rc-picker-panel-container rc-picker-month-panel-container"
          style="margin-left: 0px; margin-right: auto;"
          tabindex="-1"
        >
          <div
            class="rc-picker-panel-layout"
          >
            <div>
              <div
                class="rc-picker-panels"
              >
                <div
                  class="rc-picker-panel"
                >
                  <div
                    class="rc-picker-month-panel"
                  >
                    <div
                      class="rc-picker-header"
                    >
                      <button
                        class="rc-picker-header-prev-btn"
                        tabindex="-1"
                        type="button"
                      >
                        ‹
                      </button>
                      <div
                        class="rc-picker-header-view"
                      >
                        <button
                          class="rc-picker-year-btn"
                          tabindex="-1"
                          type="button"
                        >
                          1990年
                        </button>
                      </div>
                      <button
                        class="rc-picker-header-next-btn"
                        style="visibility: hidden;"
                        tabindex="-1"
                        type="button"
                      >
                        ›
                      </button>
                    </div>
                    <div
                      class="rc-picker-body"
                    >
                      <table
                        class="rc-picker-content"
                      >
                        <tbody>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                1
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                2
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                3
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                4
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                5
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                6
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                7
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                8
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view rc-picker-cell-today"
                            >
                              <div>
                                M
                                9
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                10
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                11
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                12
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <div
                  class="rc-picker-panel"
                >
                  <div
                    class="rc-picker-month-panel"
                  >
                    <div
                      class="rc-picker-header"
                    >
                      <button
                        class="rc-picker-header-prev-btn"
                        style="visibility: hidden;"
                        tabindex="-1"
                        type="button"
                      >
                        ‹
                      </button>
                      <div
                        class="rc-picker-header-view"
                      >
                        <button
                          class="rc-picker-year-btn"
                          tabindex="-1"
                          type="button"
                        >
                          1991年
                        </button>
                      </div>
                      <button
                        class="rc-picker-header-next-btn"
                        tabindex="-1"
                        type="button"
                      >
                        ›
                      </button>
                    </div>
                    <div
                      class="rc-picker-body"
                    >
                      <table
                        class="rc-picker-content"
                      >
                        <tbody>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                1
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                2
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                3
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                4
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                5
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                6
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                7
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                8
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                9
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                10
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                11
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                            >
                              <div>
                                M
                                12
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
